# Customer-Churn-Prediction

./: README.md  app.py  customer_churn_prediction.ipynb  pyproject.toml  requirements.txt
