[project]
name = "customer-churn-prediction"
version = "1.0.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit==1.31.0",
    "pandas==2.2.0",
    "scikit-learn==1.4.0",
    "xgboost==2.0.3",
    "joblib==1.3.2",
    "numpy==1.26.4",
    "protobuf==4.25.3",
    "pillow==10.2.0",
    "setuptools==69.1.0",
    "wheel==0.42.0"
]

[tool.uv]
python = "3.12"
